# icfpc-2017

./: .drone.yml  .gitignore  CMakeLists.txt  README.md  problem.md
ai/: CMakeLists.txt  ai.h  coco.cpp  distance_map.cpp  distance_map.h  forest.cpp  greedy.cpp  newbie.cpp  nullai.cpp  nullai.h  punter_info.cpp  punter_info.h  reachable_set.cpp  reachable_set.h  realforest.cpp  river_manager.cpp  river_manager.h  river_set.cpp  river_set.h  splurger.cpp  suzupy-1.1.1.cpp  suzupy-1.1.cpp  suzupy-1.2.1.cpp  suzupy-1.2.2.cpp  suzupy-1.2.3.cpp  suzupy-1.2.cpp  suzupy-1.3.1.cpp  suzupy-1.3.cpp  suzupy.cpp  union_find.cpp  union_find.h
ai/eomole/: main.cpp
core/: CMakeLists.txt  ai.h  driver.cpp  driver.h  emulate.py  json.h  process_punter_client.py
documents/: problem.md  protocol.md  puntfx.md
offline/: emulate.py  emulate_no_write.py  lamduct_to_log.py  log_to_dir.py  process_punter_client.py  punter_client.py  score.py  score_test.py  visualize_lamduct.py
offline/lamduct_log/: Sierpinski-triangle_greedy.txt  lambda_forest.txt  lambda_splurger.txt
tools/: buildtar.sh  wget_maps.sh
visualizer/: app.js  index.html
visualizer/log/: .gitignore
visualizer/log/1/: 0  1  10  11  12  2  3  4  5  7  8  9
visualizer/log/2/: 0.json  1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  map.json  map_result.json  punters.json  scores.json
visualizer/view/: graph.js  visualize.js
