cmake_minimum_required(VERSION 2.8)

add_executable(nullai nullai.cpp)
target_link_libraries(nullai driver)
add_executable(newbie newbie.cpp)
target_link_libraries(newbie driver)
add_executable(greedy greedy.cpp)
target_link_libraries(greedy driver)
add_executable(forest forest.cpp)
target_link_libraries(forest driver)
