cmake_minimum_required(VERSION 2.8)

add_library(river_set river_set.cpp)
add_library(union_find union_find.cpp)

add_executable(nullai nullai.cpp)
target_link_libraries(nullai driver)
add_executable(newbie newbie.cpp)
target_link_libraries(newbie driver)
add_executable(greedy greedy.cpp)
target_link_libraries(greedy driver)
add_executable(forest forest.cpp)
target_link_libraries(forest driver)
add_executable(suzupy suzupy.cpp)
target_link_libraries(suzupy driver river_set union_find)
add_executable(suzupy-1.1 suzupy-1.1.cpp)
target_link_libraries(suzupy-1.1 driver river_set union_find)
