cmake_minimum_required(VERSION 2.8)

add_library(distance_map distance_map.cpp)
add_library(punter_info punter_info.cpp)
target_link_libraries(punter_info union_find)
add_library(reachable_set reachable_set.cpp)
add_library(river_manager river_manager.cpp)
target_link_libraries(river_manager river_set)
add_library(river_set river_set.cpp)
add_library(union_find union_find.cpp)

add_executable(nullai nullai.cpp)
target_link_libraries(nullai driver)
add_executable(newbie newbie.cpp)
target_link_libraries(newbie driver)
add_executable(greedy greedy.cpp)
target_link_libraries(greedy driver)
add_executable(forest forest.cpp)
target_link_libraries(forest driver)
add_executable(suzupy suzupy.cpp)
target_link_libraries(suzupy driver river_set union_find)
add_executable(suzupy-1.1 suzupy-1.1.cpp)
target_link_libraries(suzupy-1.1 driver river_set union_find)
add_executable(suzupy-1.1.1 suzupy-1.1.1.cpp)
target_link_libraries(suzupy-1.1.1 driver punter_info river_manager)
add_executable(suzupy-1.2 suzupy-1.2.cpp)
target_link_libraries(suzupy-1.2
    driver distance_map reachable_set river_set union_find)
add_executable(splurger splurger.cpp)
target_link_libraries(splurger driver reachable_set river_set union_find)
